# ShrivenQ_Nexus

./: .gitignore  Cargo.toml  IMPLEMENTATION_TRACKER.md  README.md  SHRIVENQ_NAMING_CONVENTION.md  VISION_SHRIVENQ.md
.cargo/: config.toml
.githooks/: pre-commit
config/: default.toml
docs/: README.md  doc-tracker.toml
docs/.metadata/: doc-graph.json
docs/architecture/: IMPLEMENTATION.md  README.md  SHRIVENQUANT_LEARNINGS.md
docs/metrics/: documentation-health.md
docs/standards/: DEVELOPMENT_STANDARDS.md  UNSAFE_CODE_STANDARDS.md
src/: main.rs
src/core/: mod.rs
src/core/execution/: mod.rs  mode_switcher.rs
src/core/memory/: allocator.rs  hazard_pointer.rs  lock_free_pool.rs  mod.rs  numa_allocator.rs  safe_pool.rs  slab_allocator.rs  stats.rs
src/core/networking/: mod.rs
src/core/time/: mod.rs
